loader bug z-index fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -424,6 +424,7 @@ template {
   }
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
 @keyframes dot-fall {
