--- a/SASS/Utils/_keyframes.scss
+++ b/SASS/Utils/_keyframes.scss
@@ -31,6 +31,7 @@
 
     100%{
         opacity: 0;
+        z-index: -1;
     }
 }
 
